Fixed styling bugs. Rendered correct headers depending on page. Created scroll overflow for ingredients on recipe card.

--- a/meal-db/src/router/components/areas/index.module.css
+++ b/meal-db/src/router/components/areas/index.module.css
@@ -21,4 +21,5 @@
 }
 .areasSection > div {
 	margin:2.5rem 5rem;
+	width:130px;
 }
